force-app/main/default/objects/Opportunity/fields/Stima_a_terminare_gg__c.field-meta.xml
<CustomField>
    <fullName>Stima_a_terminare_gg__c</fullName>
    <label>Σ Stima a terminare(gg)</label>
    <summarizedField>Project_Status__c.Stima_gg_a_terminare__c</summarizedField>
    <summaryForeignKey>Project_Status__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>