force-app/main/default/objects/Opportunity/fields/SumEstimateToFinishDD__c.field-meta.xml
<CustomField>
    <fullName>SumEstimateToFinishDD__c</fullName>
    <label>Σ Estimate To Finish (dd)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>