force-app/main/default/objects/Opportunity/fields/SumTimeSpentDD__c.field-meta.xml
<CustomField>
    <fullName>SumTimeSpentDD__c</fullName>
    <label>Σ Time Spent (dd)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>