force-app/main/default/objects/Opportunity/fields/Time_Spent_gg__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent_gg__c</fullName>
    <label>Σ Time Spent (gg)</label>
    <summarizedField>Project_Status__c.TimSpentgg__c</summarizedField>
    <summaryForeignKey>Project_Status__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>