force-app/main/default/objects/Opportunity/fields/Tipo_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pagamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schema di Fatturazione</label>
    <referenceTo>Tipo_Pagamento__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>