force-app/main/default/objects/Opportunity/fields/Totale_Da_Fatturare__c.field-meta.xml
<CustomField>
    <fullName>Totale_Da_Fatturare__c</fullName>
    <description>Ammontare invoice milestone da fatturare</description>
    <label>Totale Da Fatturare</label>
    <summarizedField>Invoice_Milestone__c.Ammontare__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Milestone__c.Stato__c</field>
        <operation>equals</operation>
        <value>Da Fatturare</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Milestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>