force-app/main/default/objects/Opportunity/fields/Totale_Da_Fatturare_Percentuale__c.field-meta.xml
<CustomField>
    <fullName>Totale_Da_Fatturare_Percentuale__c</fullName>
    <description>Ammontare invoice milestone da fatturare in percentuale</description>
    <formula>Totale_Da_Fatturare__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Da Fatturare (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>