force-app/main/default/objects/Opportunity/fields/Totale_Draft_Percentuale__c.field-meta.xml
<CustomField>
    <fullName>Totale_Draft_Percentuale__c</fullName>
    <description>Ammontare invoice milestone in draft in percentuale</description>
    <formula>Totale_Draft__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Draft (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>