force-app/main/default/objects/Opportunity/fields/Totale_Fatture_Inviate__c.field-meta.xml
<CustomField>
    <fullName>Totale_Fatture_Inviate__c</fullName>
    <description>Ammontare invoice milestone in fattura inviata</description>
    <label>Totale Fatture Inviate</label>
    <summarizedField>Invoice_Milestone__c.Ammontare__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Milestone__c.Stato__c</field>
        <operation>equals</operation>
        <value>Fattura Inviata</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Milestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>