force-app/main/default/objects/Opportunity/fields/Totale_Fatture_Inviate_Percentuale__c.field-meta.xml
<CustomField>
    <fullName>Totale_Fatture_Inviate_Percentuale__c</fullName>
    <description>Ammontare invoice milestone in fattura inviata in percentuale</description>
    <formula>Totale_Fatture_Inviate__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Fatture Inviate (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>