force-app/main/default/objects/Opportunity/fields/Totale_Saldato__c.field-meta.xml
<CustomField>
    <fullName>Totale_Saldato__c</fullName>
    <description>Ammontare invoice milestone saldate</description>
    <label>Totale Saldato</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceMilestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Fattura Pagata</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>