force-app/main/default/objects/Opportunity/fields/Totale_Saldato_Percentuale__c.field-meta.xml
<CustomField>
    <fullName>Totale_Saldato_Percentuale__c</fullName>
    <description>Ammontare invoice milestone saldate in percentuale</description>
    <formula>(Totale_Saldato__c  / Amount) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale Saldato (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>