force-app/main/default/objects/Opportunity/fields/Totale_WIP__c.field-meta.xml
<CustomField>
    <fullName>Totale_WIP__c</fullName>
    <formula>Fatturato_Da_Pianificare__c +  Totale_Draft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Totale WIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>