force-app/main/default/objects/Opportunity/fields/TotalInDraft__c.field-meta.xml
<CustomField>
    <fullName>TotalInDraft__c</fullName>
    <description>Amount of Invoice Milestone in draft</description>
    <label>Total In Draft</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceMilestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>