force-app/main/default/objects/Opportunity/fields/TotalInDraftPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalInDraftPercentage__c</fullName>
    <description>Amount of Invoice Milestone in draft as a percentage</description>
    <formula>TotalInDraft__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total In Draft (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>