force-app/main/default/objects/Opportunity/fields/TotalInternalCostSynced__c.field-meta.xml
<CustomField>
    <fullName>TotalInternalCostSynced__c</fullName>
    <label>Total Internal Cost Synced</label>
    <summarizedField>Quote.TotalInternalCost__c</summarizedField>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>