force-app/main/default/objects/Opportunity/fields/TotalInWIP__c.field-meta.xml
<CustomField>
    <fullName>TotalInWIP__c</fullName>
    <formula>RevenueToPlan__c +  TotalInDraft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total In WIP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>