force-app/main/default/objects/Opportunity/fields/TotalSentInvoices__c.field-meta.xml
<CustomField>
    <fullName>TotalSentInvoices__c</fullName>
    <description>Invoice Milestone amount on sent invoice</description>
    <label>Total Sent Invoices</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceMilestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Fattura Inviata</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>