force-app/main/default/objects/Opportunity/fields/TotalSentInvoicesPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalSentInvoicesPercentage__c</fullName>
    <description>Invoice Milestone amount on invoice sent as a percentage</description>
    <formula>TotalSentInvoices__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sent Invoices (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>