force-app/main/default/objects/Opportunity/fields/TotalSettled__c.field-meta.xml
<CustomField>
    <fullName>TotalSettled__c</fullName>
    <description>Amount of invoice milestones paid</description>
    <label>Total Settled</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceMilestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Fattura Pagata</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>