force-app/main/default/objects/Opportunity/fields/TotalSettledPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalSettledPercentage__c</fullName>
    <description>Amount of invoice milestones paid as a percentage</description>
    <formula>(TotalSettled__c  / Amount) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Settled (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>