force-app/main/default/objects/Opportunity/fields/TotalToBeInvoiced__c.field-meta.xml
<CustomField>
    <fullName>TotalToBeInvoiced__c</fullName>
    <description>Amount of Invoice Milestone to be invoiced</description>
    <label>Total To Be Invoiced</label>
    <summarizedField>InvoiceMilestone__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>InvoiceMilestone__c.Stage__c</field>
        <operation>equals</operation>
        <value>Da Fatturare</value>
    </summaryFilterItems>
    <summaryForeignKey>InvoiceMilestone__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>