force-app/main/default/objects/Opportunity/fields/TotalToBeInvoicedPercentage__c.field-meta.xml
<CustomField>
    <fullName>TotalToBeInvoicedPercentage__c</fullName>
    <description>Invoice Milestone amount to be invoiced as a percentage</description>
    <formula>TotalToBeInvoiced__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total To Be Invoiced (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>