force-app/main/default/objects/Opportunity/fields/Trading_Profit__c.field-meta.xml
<CustomField>
    <fullName>Trading_Profit__c</fullName>
    <formula>Amount - Total_Internal_Cost_Synced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>