force-app/main/default/objects/Opportunity/fields/TradingProfit__c.field-meta.xml
<CustomField>
    <fullName>TradingProfit__c</fullName>
    <formula>Amount - TotalInternalCostSynced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trading Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>