force-app/main/default/objects/Opportunity/recordTypes/DecHit.recordType-meta.xml
<RecordType>
    <fullName>DecHit</fullName>
    <active>true</active>
    <businessProcess>Links Sales Process</businessProcess>
    <label>DecHit S.p.A.</label>
</RecordType>