force-app/main/default/objects/Opportunity/recordTypes/Idea75.recordType-meta.xml
<RecordType>
    <fullName>Idea75</fullName>
    <active>true</active>
    <businessProcess>Links Sales Process</businessProcess>
    <label>Idea75</label>
</RecordType>