force-app/main/default/objects/Opportunity/recordTypes/Linfa.recordType-meta.xml
<RecordType>
    <fullName>Linfa</fullName>
    <active>true</active>
    <businessProcess>Links Sales Process</businessProcess>
    <label>Linfa</label>
</RecordType>