force-app/main/default/objects/Opportunity/recordTypes/Links.recordType-meta.xml
<RecordType>
    <fullName>Links</fullName>
    <active>true</active>
    <businessProcess>Links Sales Process</businessProcess>
    <label>Links Management Technologies</label>
</RecordType>