force-app/main/default/objects/Opportunity/recordTypes/Lis.recordType-meta.xml
<RecordType>
    <fullName>Lis</fullName>
    <active>true</active>
    <businessProcess>Links Sales Process</businessProcess>
    <label>Links Innovation Services</label>
</RecordType>