force-app/main/default/objects/Opportunity/recordTypes/NexusGreaterAmount.recordType-meta.xml
<RecordType>
    <fullName>NexusGreaterAmount</fullName>
    <active>true</active>
    <businessProcess>Nexus Greater Sales</businessProcess>
    <label>Nexus Greater Amount</label>
</RecordType>