force-app/main/default/objects/Opportunity/recordTypes/NexusStandard.recordType-meta.xml
<RecordType>
    <fullName>NexusStandard</fullName>
    <active>true</active>
    <businessProcess>Nexus Smaller Process</businessProcess>
    <label>Nexus</label>
</RecordType>