force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Greater_Amount.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Greater_Amount</fullName>
    <active>true</active>
    <businessProcess>Greater Sales Process</businessProcess>
    <label>Opportunity Greater Amount</label>
</RecordType>