force-app/main/default/objects/Opportunity/recordTypes/Oppurtunity_Standard.recordType-meta.xml
<RecordType>
    <fullName>Oppurtunity_Standard</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Oppurtunity Standard</label>
</RecordType>