force-app/main/default/objects/Opportunity/validationRules/AmountInvoiceMilestone.validationRule-meta.xml
<ValidationRule>
    <fullName>AmountInvoiceMilestone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &quot;Links&quot;,
InvoiceAmount__c &lt;&gt; Amount,
ISPICKVAL( StageName , &quot;Negotiation/Review&quot;),
ISPICKVAL(PRIORVALUE(StageName),&quot;Milestone Planning&quot;))</errorConditionFormula>
    <errorMessage>Non puoi passare allo stato successivo in quanto la somma degli amount riferiti alle milestone è inferiore all&apos;amount dell&apos;opportunity.</errorMessage>
</ValidationRule>