force-app/main/default/objects/Opportunity/validationRules/BlockStatusOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>BlockStatusOnCreate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL( StageName , &apos;Prospecting&apos;)),
RecordType.DeveloperName = &apos;Links&apos;

)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Inserire in fase di creazione il valore &quot;Prospecting&quot;.</errorMessage>
</ValidationRule>