force-app/main/default/objects/Opportunity/validationRules/ClosedOptyDescription.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedOptyDescription</fullName>
    <active>false</active>
    <description>A description is required for Opportunities with Stage equal to &quot;Closed Lost&quot; or &quot;Closed Won&quot;</description>
    <errorConditionFormula>IF(
AND(ISPICKVAL( StageName , &apos;Closed Won&apos;),ISBLANK( Description )),
TRUE,
IF(AND(ISPICKVAL( StageName , &apos;Closed Lost&apos;),ISBLANK( Description )),TRUE,FALSE)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description is mandatory in order to close the Opportunity</errorMessage>
</ValidationRule>