force-app/main/default/objects/Opportunity/validationRules/Links_RIsk_Level_Description_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Links_RIsk_Level_Description_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &quot;Links&quot;,
NOT(ISPICKVAL(Risk_Level__c,&quot;&quot;)),
ISBLANK(Risk_Level_Description__c)
)</errorConditionFormula>
    <errorDisplayField>Risk_Level_Description__c</errorDisplayField>
    <errorMessage>Risk Level Description must be specified.</errorMessage>
</ValidationRule>