force-app/main/default/objects/Opportunity/validationRules/PreventCheckCDGOpportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCheckCDGOpportunity</fullName>
    <active>true</active>
    <description>Impedire il passaggio in Check CDG di una opportunity se non si è prima in Pianifica Milestone</description>
    <errorConditionFormula>AND(
	OR(
		ISPICKVAL( PRIORVALUE( StageName ) , &apos;Prospecting&apos;),
		ISPICKVAL( PRIORVALUE( StageName ) , &apos;Qualification&apos;),
		ISPICKVAL( PRIORVALUE( StageName ) , &apos;Needs Analysis&apos;),
		ISPICKVAL( PRIORVALUE( StageName ) , &apos;Value Proposition - Demo&apos;),
		ISPICKVAL( PRIORVALUE( StageName ) , &apos;Proposal/Price Quote&apos;)
	),
	ISPICKVAL( StageName , &apos;Check CDG&apos;)
)</errorConditionFormula>
    <errorMessage>L&apos;opportunità non può essere marcata come Check CDG a partire dagli stati Prospecting, Qualification, Needs Analysis, Value Proposition - Demo, Proposal/Price Quote.
Passare prima in Pianifica Milestone</errorMessage>
</ValidationRule>