force-app/main/default/objects/Opportunity/validationRules/StageWonLost.validationRule-meta.xml
<ValidationRule>
    <fullName>StageWonLost</fullName>
    <active>false</active>
    <description>Se lo stage è won o lost posso compilare il form sotto</description>
    <errorConditionFormula>NOT(OR(
      ISPICKVAL(StageName,&apos;Closed Won&apos;),ISPICKVAL(StageName, &apos;Closed Lost&apos;)
   ))</errorConditionFormula>
    <errorDisplayField>ReasonWonLost__c</errorDisplayField>
    <errorMessage>Error</errorMessage>
</ValidationRule>