force-app/main/default/objects/Opportunity/listViews/Opportunity_Idea75.listView-meta.xml
<ListView>
    <fullName>Opportunity_Idea75</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ProductionOrder__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ReferenceNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Idea75</value>
    </filters>
    <label>Opportunity Idea75</label>
</ListView>