force-app/main/default/objects/Opportunity/listViews/Opportunity_Lis.listView-meta.xml
<ListView>
    <fullName>Opportunity_Lis</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ProductionOrder__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ReferenceNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Lis</value>
    </filters>
    <label>Opportunity Lis</label>
</ListView>